loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: Missing closing brace `}' assumed here
var nbBaggle = 0
^Poucet1:1: error: Missing closing brace `}' assumed here
var nbBaggle = 0
^Poucet1:1: error: expected class or object definition
var nbBaggle = 0
^Poucet1:2: error: expected class or object definition
do{ for (avance <- 1 to 5) {
^